--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -120,6 +120,35 @@ button.navbar-toggler span{
 .formStatus{
   text-transform: capitalize;
 }
+.loginInfo{
+  position: absolute;
+  background: #f2f2f2;
+  padding: 50px 50px 0;
+  z-index: 1;
+  top: 50%;
+  transform: translate(0,-50%);
+}
+.loginInfo h2{
+  font-size: 20px;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  font-weight: bold;
+  display: inline-block;
+  color: black;
+  border-bottom: 2px solid black;
+}
+.loginInfo ul{
+  margin: 0 0 50px;
+  list-style: none;
+  padding: 0;
+  font-size: 15px;
+  line-height: 25px;
+  display: block;
+}
+.loginInfo b{
+  display: inline-block;
+  min-width: 80px;
+}
 /*end login + register*/
 
 /*start expenses*/
@@ -340,7 +369,7 @@ form li.editCol span {
     margin: auto;
   }
   .loginBlock {
-    padding: 15px;
+    padding: 75px 15px 0;
   }
   .loginBlock button {
     padding: 5px 20px;
